--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/windows,maven,java
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,maven,java
+# Created by https://www.toptal.com/developers/gitignore/api/windows,java,java-web,maven
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,java,java-web,maven
 
 ### Java ###
 # Compiled class file
@@ -26,8 +26,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-### Maven ###
+### Java-Web ###
+## ignoring target file
 target/
+
+### Maven ###
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -65,4 +68,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,maven,java
+# End of https://www.toptal.com/developers/gitignore/api/windows,java,java-web,maven
